--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
-scipy
-torch==0.4.0
-torchvision==0.2.1
+kmodes==0.9
+Flask_Jsonpify==1.5.0
+pandas==0.22.0
+autokeras==0.2.4
+pymongo==3.7.0
 numpy==1.14.5
-scikit-learn==0.19.1
-keras==2.2.2
-tensorflow
-autokeras
-pytest
-pytest-cov
-coverage
+matplotlib==2.2.2
+sklearn_deap==0.2.2
+umap_learn==0.3.0
+Flask==0.12.2
+seaborn==0.9.0
+evolutionary_search==0.1
+scikit_learn==0.19.2
+umap==0.1.1
